--- a/exercicio.html
+++ b/exercicio.html
@@ -51,15 +51,14 @@
       box-sizing: border-box;
     }
 
-   /* ===== FOOTER ===== */
-footer {
-  background: white;
-  color: #555;
-  text-align: center;
-  padding: 8px 0;
-  font-size: 0.85em;
-  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
-}
+    footer {
+      background: white;
+      color: #555;
+      text-align: center;
+      padding: 8px 0;
+      font-size: 0.85em;
+      box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+    }
 
     /* ===== Correção mobile ===== */
     @media (max-width: 768px) {
@@ -112,94 +111,127 @@ footer {
       transition: background-color 0.3s;
     }
 
+    /* ===== configuração do emoji dimitry ===== */
+    .emoji-head {
+      width: 32px;
+      height: 32px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
 
-/* ===== configuração do emoji dimitry ===== */
+    /* Clique e estado visual */
+    .clickable {
+      cursor: pointer;
+      transition: transform 0.12s ease, box-shadow 0.12s ease, background-color 0.2s;
+      user-select: none;
+      padding: 10px;
+      margin: 6px;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+      background: #fff;
+      min-width: 140px;
+      text-align: center;
+    }
 
-.emoji-head {
-  width: 32px;
-  height: 32px;
-  vertical-align: middle;
-  margin-right: 8px;
-}
+    /* efeito breve ao clicar */
+    .clickable.clicked {
+      transform: scale(1.06);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+    }
 
-/* Clique e estado visual */
-.clickable {
-  cursor: pointer;
-  transition: transform 0.12s ease, box-shadow 0.12s ease, background-color 0.2s;
-  user-select: none;
-  padding: 10px;
-  margin: 6px;
-  border-radius: 8px;
-  border: 1px solid #ddd;
-  background: #fff;
-  min-width: 140px;
-  text-align: center;
-}
+    /* estado selecionado (esquerda) */
+    .word.selected {
+      outline: 3px solid rgba(76,175,80,0.35);
+      background: #f0fff4;
+    }
 
-/* efeito breve ao clicar */
-.clickable.clicked {
-  transform: scale(1.06);
-  box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-}
+    /* desativado (já usado nessa rodada) */
+    .clickable.disabled {
+      opacity: 0.6;
+      pointer-events: none;
+    }
 
-/* estado selecionado (esquerda) */
-.word.selected {
-  outline: 3px solid rgba(76,175,80,0.35);
-  background: #f0fff4;
-}
+    /* cores só mostradas ao revelar */
+    .correct {
+      background: #4CAF50 !important;
+      color: #fff !important;
+      border-color: rgba(0,0,0,0.05) !important;
+    }
 
-/* desativado (já usado nessa rodada) */
-.clickable.disabled {
-  opacity: 0.6;
-  pointer-events: none;
-}
+    .wrong {
+      background: #e74c3c !important;
+      color: #fff !important;
+      border-color: rgba(0,0,0,0.05) !important;
+    }
 
-/* cores só mostradas ao revelar */
-.correct {
-  background: #4CAF50 !important;
-  color: #fff !important;
-  border-color: rgba(0,0,0,0.05) !important;
-}
+    /* resultados finais */
+    .results-list { margin-top: 12px; display: grid; gap:8px; }
+    .result-item { padding: 8px 10px; border-radius:8px; color:#fff; }
+    .result-item.correct { background:#4CAF50; }
+    .result-item.wrong { background:#e74c3c; }
 
-.wrong {
-  background: #e74c3c !important;
-  color: #fff !important;
-  border-color: rgba(0,0,0,0.05) !important;
-}
+    /* botão retry */
+    .retry-btn {
+      margin-top: 14px;
+      padding: 10px 14px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
 
-/* resultados finais */
-.results-list { margin-top: 12px; display: grid; gap:8px; }
-.result-item { padding: 8px 10px; border-radius:8px; color:#fff; }
-.result-item.correct { background:#4CAF50; }
-.result-item.wrong { background:#e74c3c; }
+    /* ===== Botão Iniciar exercícios ===== */
+    #startBtn {
+      display: inline-block;
+      padding: 12px 20px;
+      font-size: 1em;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
 
-/* botão retry */
-.retry-btn {
-  margin-top: 14px;
-  padding: 10px 14px;
-  background: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-}
+    #startBtn:hover {
+      background-color: #45A049;
+    }
 
-/* ===== Botão Iniciar exercícios ===== */
-#startBtn {
-  display: inline-block;
-  padding: 12px 20px;
-  font-size: 1em;
-  background-color: #4CAF50; /* mesmo verde padrão da página */
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
+    /* ===== Palavras cruzadas padrão ===== */
+    .column {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin: 0 10px;
+    }
 
-#startBtn:hover {
-  background-color: #45A049; /* hover idêntico ao backBtn e toggles */
-}
+    .word, .placeholder {
+      padding: 10px 12px;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+      background-color: #fff;
+      color: #000;
+      text-align: center;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s, transform 0.1s;
+    }
+
+    /* ===== Palavras cruzadas no modo escuro ===== */
+    body.dark-mode .word, 
+    body.dark-mode .placeholder {
+      background-color: #1e1e1e;
+      color: #f5f5f5;
+      border: 1px solid #333;
+    }
+
+    body.dark-mode .word.selected {
+      background-color: #2a2a2a;
+    }
+
+    /* cores de correto e errado permanecem */
+    body.dark-mode .correct { background-color: #4CAF50 !important; color: #fff !important; }
+    body.dark-mode .wrong { background-color: #e74c3c !important; color: #fff !important; }
 
   </style>
 </head>
@@ -215,11 +247,11 @@ footer {
   <!-- Sidebar -->
   <aside>
     <nav>
-    <a href="index.html">📈 Selecionar</a>
-    <a href="exercicio.html">📝 Exercícios</a>
-    <a href="jogo.html">🎨 Jogos</a>
-    <a href="chat.html">💬 Chat</a>
-  </nav>
+      <a href="index.html">📈 Selecionar</a>
+      <a href="exercicio.html">📝 Exercícios</a>
+      <a href="jogo.html">🎨 Jogos</a>
+      <a href="chat.html">💬 Chat</a>
+    </nav>
     <div class="mascote">🐻 Dimitry</div>
   </aside>
 
@@ -237,10 +269,7 @@ footer {
       </div>
 
       <!-- Exercício -->
-      <div id="cruzadoContainer" class="container">
-        <div class="column" id="words"></div>
-        <div class="column" id="placeholders"></div>
-      </div>
+      <div id="cruzadoContainer" class="container"></div>
 
       <!-- Botão voltar -->
       <div id="backButtonContainer">
@@ -251,7 +280,7 @@ footer {
 
   <!-- Rodapé fixo -->
   <footer>
-  	© 2025 Славянский клуб — Aprenda Russo e Português com diversão!
+    © 2025 Славянский клуб — Aprenda Russo e Português com diversão!
   </footer>
 
   <!-- Mascote Dimitri -->
@@ -276,77 +305,65 @@ footer {
   <!-- Scripts -->
   <script src="exercicio.js"></script>
 
-  
-<script>
-const darkModeToggle = document.getElementById('darkModeToggle');
-const languageToggle = document.getElementById('languageToggle');
+  <script>
+    const darkModeToggle = document.getElementById('darkModeToggle');
+    const languageToggle = document.getElementById('languageToggle');
 
-// ======== Tema salvo ========
-const savedTheme = localStorage.getItem('theme');
-if (savedTheme === 'dark') {
-  document.body.classList.add('dark-mode');
-  darkModeToggle.textContent = '☀️';
-} else {
-  darkModeToggle.textContent = '🌙';
-}
+    // Tema salvo
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+      document.body.classList.add('dark-mode');
+      darkModeToggle.textContent = '☀️';
+    } else {
+      darkModeToggle.textContent = '🌙';
+    }
 
-// ======== Alternar modo escuro ========
-darkModeToggle.addEventListener('click', () => {
-  document.body.classList.toggle('dark-mode');
-  const isDark = document.body.classList.contains('dark-mode');
-  darkModeToggle.textContent = isDark ? '☀️' : '🌙';
-  localStorage.setItem('theme', isDark ? 'dark' : 'light');
-});
+    // Alternar modo escuro
+    darkModeToggle.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+      const isDark = document.body.classList.contains('dark-mode');
+      darkModeToggle.textContent = isDark ? '☀️' : '🌙';
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    });
 
-// ======== Sistema de idiomas ========
-const texts = {
-  pt: {
-    title: "📝 Exercício Interativo",
-    footer: "© 2025 Славянский клуб — Aprenda Russo e Português com diversão!",
-    backBtn: "🔙 Voltar",
-    nav: ["📈 Selecionar", "📝 Exercícios", "🎨 Jogos", "💬 Chat"],
-    mascot: "🐻 Dimitry"
-  },
-  ru: {
-    title: "📝 Интерактивное упражнение",
-    footer: "© 2025 Славянский клуб — Учите русский и португальский с удовольствием!",
-    backBtn: "🔙 Назад",
-    nav: ["📈 Выбор", "📝 Упражнения", "🎨 Игры", "💬 Чат"],
-    mascot: "🐻 Димитрий"
-  }
-};
+    // Sistema de idiomas
+    const texts = {
+      pt: {
+        title: "📝 Exercício Interativo",
+        footer: "© 2025 Славянский клуб — Aprenda Russo e Português com diversão!",
+        backBtn: "🔙 Voltar",
+        nav: ["📈 Selecionar", "📝 Exercícios", "🎨 Jogos", "💬 Chat"],
+        mascot: "🐻 Dimitry"
+      },
+      ru: {
+        title: "📝 Интерактивное упражнение",
+        footer: "© 2025 Славянский клуб — Учите русский и португальский с удовольствием!",
+        backBtn: "🔙 Назад",
+        nav: ["📈 Выбор", "📝 Упражнения", "🎨 Игры", "💬 Чат"],
+        mascot: "🐻 Димитрий"
+      }
+    };
 
-// Define idioma salvo ou padrão
-let currentLang = localStorage.getItem('lang') || 'pt';
-applyLanguage(currentLang);
+    let currentLang = localStorage.getItem('lang') || 'pt';
+    applyLanguage(currentLang);
 
-// Alternar idioma
-languageToggle.addEventListener('click', () => {
-  currentLang = currentLang === 'pt' ? 'ru' : 'pt';
-  localStorage.setItem('lang', currentLang);
-  applyLanguage(currentLang);
-});
+    languageToggle.addEventListener('click', () => {
+      currentLang = currentLang === 'pt' ? 'ru' : 'pt';
+      localStorage.setItem('lang', currentLang);
+      applyLanguage(currentLang);
+    });
 
-// ======== Aplicar idioma ========
-function applyLanguage(lang) {
-  const t = texts[lang];
-  document.querySelector("main h2").textContent = t.title;
-  document.querySelector("footer").textContent = t.footer;
-  document.getElementById("backBtn").textContent = t.backBtn;
+    function applyLanguage(lang) {
+      const t = texts[lang];
+      document.querySelector("main h2").textContent = t.title;
+      document.querySelector("footer").textContent = t.footer;
+      document.getElementById("backBtn").textContent = t.backBtn;
+      languageToggle.textContent = lang === 'pt' ? 'РУ' : 'PT';
 
-  // O botão mostra o idioma oposto
-  languageToggle.textContent = lang === 'pt' ? 'РУ' : 'PT';
-
-  // Atualizar links do menu lateral
-  const navLinks = document.querySelectorAll("aside nav a");
-  navLinks.forEach((link, i) => {
-    link.textContent = t.nav[i];
-  });
-
-  // Atualizar nome do mascote
-  const mascoteDiv = document.querySelector(".mascote");
-  mascoteDiv.textContent = t.mascot;
-}
-</script>
+      const navLinks = document.querySelectorAll("aside nav a");
+      navLinks.forEach((link, i) => { link.textContent = t.nav[i]; });
+      document.querySelector(".mascote").textContent = t.mascot;
+    }
+  </script>
 </body>
 </html>
