--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body.dark-mode footer {
   <nav>
     <a href="index.html">📈 Selecionar</a>
     <a href="exercicio.html">📝 Exercícios</a>
-    <a href="jogo.html">🎨 Jogos</a>
+    <a href="jogo.html">🎮 Jogos</a>
     <a href="chat.html">💬 Chat</a>
   </nav>
   <div class="mascote"> Dimitry</div>
@@ -789,5 +789,6 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
